Make frame injection simpler and Chrome-compatible

--- a/src/frame.html
+++ b/src/frame.html
@@ -19,5 +19,7 @@
   <body>
     <b id='b1'>Hi from frame</b>
     <button id='but'>Click me</button>
+    <script src="/lib/browser-polyfill.min.js"></script>
+    <script src="/src/frame.js"></script>
   </body>
 </html>
