--- a/src/frame.html
+++ b/src/frame.html
@@ -2,23 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <style>
-      body {
-        line-height: 1.6;
-        font-size: 16px;
-        font-family: "Helvetica Neue", Arial, sans-serif;
-        color: #444;
-        padding: 0 10px;
-        background-color: #FFFFB8;
-      }
-      a {
-        color: #C20108;
-      }
-    </style>
+    <link rel="stylesheet" href="/src/frame.css">
   </head>
   <body>
-    <b id='b1'>Hi from frame</b>
-    <button id='but'>Click me</button>
+    <div class="moy-logo-block"><a href="https://moy.design" target="_blank">
+      <img src="/res/moy.svg"><strong>MOY</strong></a>
+    </div>
+    <div id="parserName"></div>
     <script src="/lib/browser-polyfill.min.js"></script>
     <script src="/src/frame.js"></script>
   </body>
