--- a/src/frame.html
+++ b/src/frame.html
@@ -22,7 +22,7 @@
       <div id='original' class='flex' style='display: none'>
         <span>
           No looks for this page. 
-          <a href='https://github.com/MoyDesign/MoyPlugin/blob/master/README.md#error' target='_blank'>What to do?</a>
+          <a href='https://github.com/MoyDesign/MoyPlugin/blob/master/README.md#if-the-plugin-doesnt-work' target='_blank'>What to do?</a>
         </span>
       </div>
     </div>
