Allow to choose the original look

--- a/src/frame.html
+++ b/src/frame.html
@@ -12,15 +12,7 @@
         </div>
       </div>
 
-      <div id='moyed' class='flex col' style='display: none'>
-      </div>
-
-      <div id='original' style='display: none'>
-        <span>
-          No looks for this page. 
-          <a href='https://github.com/MoyDesign/MoyPlugin/blob/master/README.md#if-the-plugin-doesnt-work' target='_blank'>What to do?</a>
-        </span>
-      </div>
+      <div id='moyed' class='flex col'></div>
     </div>
     <script src="/lib/browser-polyfill.min.js"></script>
     <script src="/src/frame.js"></script>
