--- a/src/frame.html
+++ b/src/frame.html
@@ -2,7 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/src/frame.css">
+    <link rel="stylesheet" href="/src/style.css">
+    <style>
+      body {
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+      .container {
+        margin: 6px;
+        padding: 10px;
+        border: 2px solid #C20108;
+        border-radius: 5px;
+        background-color: #fff;
+        line-height: 1.6;
+        font-size: 16px;
+        font-family: "Helvetica Neue", Arial, sans-serif;
+        color: #444;
+        display: inline-block;
+        float: right;
+      }      
+    </style>
   </head>
   <body>
     <div class='container'>
@@ -13,6 +31,11 @@
       </div>
 
       <div id='moyed' class='flex col'></div>
+      <div class='flex row' style='justify-content: space-around; margin-top: 10px; white-space: nowrap;'>
+        <a href='https://github.com/MoyDesign/MoyPlugin/blob/master/README.md#get-help' target='_blank'>Get help</a>
+        <span style='min-width: 10px; width: 10px;'></span>
+        <a id='settings' target='_blank'>Settings</a>
+      </div>
     </div>
     <script src="/lib/browser-polyfill.min.js"></script>
     <script src="/src/frame.js"></script>
