--- a/src/settings.html
+++ b/src/settings.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/src/style.css">
     <title>Settings - Moy.Design</title>
+    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="/lib/codemirror/lib/codemirror.css">
     <style>
       body {
         background-color: #fff;
@@ -21,12 +22,20 @@
         color: #444;
         max-width: 800px;
       }
-      div + div {
+      .row + .row {
         margin-top: 10px;
       }
       textarea, input {
         display: block;
         width: 100%;
+        font-size: 16px;
+        font-family: "Courier New", "Courier", monospace;
+        box-sizing: border-box;
+      }
+      .CodeMirror {
+        font-size: 13px;
+        line-height: 1;
+        border: 1px solid #444;
       }
     </style>
   </head>
@@ -37,30 +46,37 @@
           <img src="/res/moy.svg"><strong>MOY</strong></a>
         </div>
       </div>
-      <div>
+      <div class='row'>
         <label for='github'>GitHub account:</label>
         <div class='hint'>
           GitHub account to look for data. Change at your own risk. <a href='#'>Restore default</a>.
         </div>
         <input type='text' id='github' value='MoyDesign'>
       </div>
-      <div>
+      <div class='row'>
         <label for='parser'>Draft parser:</label>
         <div class='hint'>
           Locally stored parser.
-          <a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/parser.md#parser' target='_blank'>Syntax help</a>
+          <a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/parser.md#parser' target='_blank'>Help</a>.
         </div>
         <textarea id='parser' rows='10'></textarea>
       </div>
-      <div>
+      <div class='row'>
         <label for='parser'>Draft template:</label>
         <div class='hint'>
           Locally stored template.
-          <a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/template.md#template' target='_blank'>Syntax help</a>
+          <a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/template.md#template' target='_blank'>Help</a>.
         </div>
-        <textarea id='parser' rows='10'></textarea>
+        <textarea id='template' rows='10'></textarea>
       </div>
     </div>
     <script src="/lib/browser-polyfill.min.js"></script>
+    <script src="/lib/codemirror/lib/codemirror.js"></script>
+    <script src="/lib/codemirror/addon/mode/simple.js"></script>
+    <script src="/lib/codemirror/addon/mode/multiplex.js"></script>
+    <script src="/lib/codemirror/mode/xml.js"></script>
+    <script src="/lib/codemirror/mode/yaml.js"></script>
+    <script src="/lib/codemirror/mode/handlebars.js"></script>
+    <script src="/src/settings.js"></script>
   </body>
 </html>
