Add Welcome page

--- a/src/settings.html
+++ b/src/settings.html
@@ -54,6 +54,10 @@
       <div class='row clearfix'>
         <button id='saveBut' class='to-right'>Save</button>
       </div>
+      <div class='row'>
+        <label for='welcomePageBut'>Welcome page:</label>
+        <div><button id='welcomePageBut'>Show Welcome page</button></div>
+      </div>
     </div>
     <script src="/lib/browser-polyfill.min.js"></script>
     <script src="/src/settings.js"></script>
