MAke opening draft better

--- a/src/draft.html
+++ b/src/draft.html
@@ -52,6 +52,7 @@
         <button id='saveBut' class='to-right'>Save</button>
       </div>
     </div>
-    <script src="/lib/browser-polyfill.min.js"></script>
+    <script src='/lib/browser-polyfill.min.js'></script>
+    <script src='/src/draft.js'></script>
   </body>
 </html>
