Add button to refresh data manually from settings

--- a/src/settings.html
+++ b/src/settings.html
@@ -48,10 +48,12 @@
         </div>
         <input type='text' id='githubUserInput' value=''>
       </div>
-      <div id='failDiv' class='fail row' style='display: none'></div>
-      <div id='successDiv' class='success row' style='display: none'>Success</div>
       <div class='row clearfix'>
         <button id='saveBut' class='to-right'>Save</button>
+      </div>
+      <div class='row'>
+        <label for='refreshBut'>Refresh data:</label>
+        <div><button id='refreshBut'>Refresh Data</button></div>
       </div>
       <div class='row'>
         <label for='welcomePageBut'>Welcome page:</label>
