--- a/src/settings.html
+++ b/src/settings.html
@@ -42,11 +42,11 @@
       </div>
       <div class='row'>
         <label for='githubUserInput'>GitHub account:</label>
+        <input type='text' id='githubUserInput' value=''>
         <div class='hint'>
           GitHub account to look for data. Change at your own risk.
           <a id='resetGithubUserBut' href='#'>Restore default</a>.
         </div>
-        <input type='text' id='githubUserInput' value=''>
       </div>
       <div class='row clearfix'>
         <button id='saveBut' class='to-right'>Save</button>
@@ -54,6 +54,9 @@
       <div class='row'>
         <label for='refreshBut'>Refresh data:</label>
         <div><button id='refreshBut'>Refresh Data</button></div>
+        <div class='hint'>
+          The plugin periodically reloads available looks from GitHub. This button makes it reload now.
+        </div>
       </div>
       <div class='row'>
         <label for='welcomePageBut'>Welcome page:</label>
