Add help links for parsers and templates to Settings

--- a/src/settings.html
+++ b/src/settings.html
@@ -71,13 +71,13 @@
       </div>
       <div class='row'>
          <details>
-          <summary>Parsers</summary>
+          <summary>Parsers (<a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/parser.md#parser' target='_blank'>help</a>)</summary>
           <ol id='remoteParsersCont'></ol>
         </details>
       </div>
       <div class='row'>
          <details>
-          <summary>Templates</summary>
+          <summary>Templates (<a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/template.md#template' target='_blank'>help</a>)</summary>
           <ol id='remoteTemplatesCont'></ol>
         </details>
       </div>
