Introduce local parsers and templates

--- a/src/settings.html
+++ b/src/settings.html
@@ -72,12 +72,22 @@
       <div class='row'>
          <details>
           <summary>Parsers (<a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/parser.md#parser' target='_blank'>help</a>)</summary>
+          <p><b>Local parsers</b></p>
+          <p>Local parsers reside in your browser. This allows to prototype and polish a parser quickly. Once the parser is complete, consider commiting it to GitHub.</p>
+          <ol id='localParsersCont'></ol>
+
+          <p><b>Parsers from GitHub</b></p>
           <ol id='remoteParsersCont'></ol>
         </details>
       </div>
       <div class='row'>
          <details>
           <summary>Templates (<a href='https://github.com/MoyDesign/MoyDocs/blob/master/docs/template.md#template' target='_blank'>help</a>)</summary>
+          <p><b>Local templates</b></p>
+          <p>Local templates reside in your browser. This allows to prototype and polish a template quickly. Once the template is complete, consider commiting it to GitHub.</p>
+          <ol id='localTemplatesCont'></ol>
+
+          <p><b>Templates from GitHub</b></p>
           <ol id='remoteTemplatesCont'></ol>
         </details>
       </div>
