--- a/src/editor.html
+++ b/src/editor.html
@@ -30,9 +30,6 @@
       .row + .row {
         margin-top: 10px;
       }
-      button + button {
-        margin-right: 10px;
-      }
       input {
         display: block;
         width: 100%;
@@ -61,7 +58,7 @@
           <textarea id='textArea'></textarea>
         </div>
         <div class='row clearfix'>
-          <button id='deleteBut' class='to-right'>Delete</button>
+          <button id='deleteBut' class='to-right' style='margin-left: 10px'>Delete</button>
           <button id='saveBut' class='to-right'>Save</button>
         </div>
       </div>
