--- a/src/settings.html
+++ b/src/settings.html
@@ -75,6 +75,7 @@
           <p><b>Local parsers</b></p>
           <p>Local parsers reside in your browser. This allows to prototype and polish a parser quickly. Once the parser is complete, consider commiting it to GitHub.</p>
           <ol id='localParsersCont'></ol>
+          <button id='newParserBut'>New local parser</button>
 
           <p><b>Parsers from GitHub</b></p>
           <ol id='remoteParsersCont'></ol>
@@ -86,6 +87,7 @@
           <p><b>Local templates</b></p>
           <p>Local templates reside in your browser. This allows to prototype and polish a template quickly. Once the template is complete, consider commiting it to GitHub.</p>
           <ol id='localTemplatesCont'></ol>
+          <button id='newTemplateBut'>New local template</button>
 
           <p><b>Templates from GitHub</b></p>
           <ol id='remoteTemplatesCont'></ol>
