Add create parser buttons with parser stubs

--- a/src/editor.html
+++ b/src/editor.html
@@ -58,6 +58,7 @@
           <textarea id='textArea'></textarea>
         </div>
         <div class='row clearfix'>
+          <button id='helpBut' class='to-right' style='margin-left: 10px'>Help</button>
           <button id='deleteBut' class='to-right' style='margin-left: 10px'>Delete</button>
           <button id='saveBut' class='to-right'>Save</button>
         </div>
