Link local copies with their remote originals

--- a/src/editor.html
+++ b/src/editor.html
@@ -59,8 +59,9 @@
         </div>
         <div class='row clearfix'>
           <button id='helpBut' class='to-right' style='margin-left: 10px'>Help</button>
-          <button id='deleteBut' class='to-right' style='margin-left: 10px'>Delete</button>
-          <button id='saveBut' class='to-right'>Save</button>
+          <button id='deleteBut' class='to-right' style='margin-left: 10px'>Delete locally</button>
+          <button id='saveBut' class='to-right' style='margin-left: 10px'>Save locally</button>
+          <button id='remoteLinkBut' class='to-right' style='display: none'>Open original</button>
         </div>
       </div>
     </div>
